[workspace]
members = [
    "ole-app",
    "ole-audio",
    "ole-analysis",
    "ole-gui",
    "ole-input",
    "ole-library",
]
resolver = "2"

[profile.release]
opt-level = 3       # Default. Optimize for speed.
lto = "fat"         # Link Time Optimization. Slower build, faster binary.
codegen-units = 1   # Allow LLVM to optimize the whole crate at once.
panic = "abort"     # Remove stack unwinding (smaller/faster), but hard crash on panic.
strip = true        # Strip symbols from binary (reduces size significantly).

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
authors = ["OLE Contributors"]
description = "Terminal-based DJ application with vintage CRT aesthetic"

[workspace.dependencies]
# Audio I/O and processing
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "aac"] }
rubato = "0.14"

# Analysis
rustfft = "6.2"

# GUI
eframe = "0.30"
egui = "0.30"

# Concurrency
crossbeam-channel = "0.5"
ringbuf = "0.4"
parking_lot = "0.12"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"

# Internal crates
ole-audio = { path = "ole-audio" }
ole-analysis = { path = "ole-analysis" }
ole-gui = { path = "ole-gui" }
ole-input = { path = "ole-input" }
ole-library = { path = "ole-library" }
