[package]
name = "ole-app"
version.workspace = true
edition.workspace = true
description = "OLE - Terminal DJ Application"

[[bin]]
name = "ole"
path = "src/main.rs"

[dependencies]
ole-audio.workspace = true
ole-analysis.workspace = true
ole-gui.workspace = true
ole-input.workspace = true
ole-library.workspace = true

cpal.workspace = true
eframe.workspace = true
egui.workspace = true
crossbeam-channel.workspace = true
ringbuf.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dirs.workspace = true
