[package]
name = "ole-gui"
version.workspace = true
edition.workspace = true
description = "OLE - Cyberpunk DJ GUI (egui)"

[dependencies]
ole-audio.workspace = true
ole-analysis.workspace = true
ole-input.workspace = true
ole-library.workspace = true

eframe.workspace = true
egui.workspace = true
crossbeam-channel.workspace = true
dirs.workspace = true
tracing.workspace = true
